--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,21 @@
+.wrapper-loader {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper-loader.is-hidden {
+  display: none;
+}
+
 .loader {
+  display: block;
   width: 48px;
   height: 48px;
   border-radius: 50%;
@@ -18,7 +35,7 @@
 .loader::after {
   inset: 8px;
   transform: rotate3d(90, 90, 0, 180deg);
-  border-color: #ff3d00;
+  border-color: lightblue;
 }
 
 @keyframes rotate {
@@ -41,4 +58,27 @@
   100% {
     clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
   }
+}
+
+.container {
+  width: 1000px;
+  margin-inline: auto;
+}
+
+.cat-info {
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.right-col {
+}
+
+.left-col {
 }
